# DeutschTTS

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/deutschtts/: __init__.py  audio.py  cli.py  config.py  pipeline.py  synthesizer.py  text.py
src/deutschtts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_pipeline.py  test_text.py
